locking litellm to prevent edge case bug w/ Message()

--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,9 @@ name = "pypi"
 
 [packages]
 json-repair = "*"
-litellm = "*"
+litellm = "==1.61.19"
 
 [dev-packages]
 
 [requires]
-python_version = "2.7"
+python_version = "3.11"
